Fix async access warnings and End chest conversion issue
- Fix ChunkLoadListener: Move tile entity access to main thread to prevent 'Block entity is null' warnings
- Fix ConvertCommand: Use BYTE type for playerPlacedKey instead of INTEGER to match actual storage
- Add clearFirstOpenMarkersForWorld() method to StorageManager for resetting loot generation
- Add /valloot reset command to clear first-open markers and re-enable loot for containers
- Sequential world conversion already in place for /vl convert all